{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 5,
  "lineage": "f107fe8c-11ac-18b3-a99f-0b458b7af425",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:security-group/sg-08ceaceaf61360993",
            "description": "Allow remote SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ceaceaf61360993",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "darey-liveclass-cluster-remote-access20240129153901733700000009",
            "name_prefix": "darey-liveclass-cluster-remote-access",
            "owner_id": "891377124516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darey-liveclass-cluster-remote"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster-remote"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:security-group/sg-0ec3fd5a7c2ead73b",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ec3fd5a7c2ead73b",
            "ingress": [],
            "name": "darey-liveclass-cluster-cluster-2024012915390448800000000a",
            "name_prefix": "darey-liveclass-cluster-cluster-",
            "owner_id": "891377124516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darey-liveclass-cluster-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:security-group/sg-034ba292a86660411",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-034ba292a86660411",
            "ingress": [],
            "name": "darey-liveclass-cluster-node-2024012915390485990000000b",
            "name_prefix": "darey-liveclass-cluster-node-",
            "owner_id": "891377124516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darey-liveclass-cluster-node",
              "kubernetes.io/cluster/darey-liveclass-cluster": "owned"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster-node",
              "kubernetes.io/cluster/darey-liveclass-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3920884606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ec3fd5a7c2ead73b",
            "security_group_rule_id": "sgr-05705fbbd394e78f3",
            "self": false,
            "source_security_group_id": "sg-034ba292a86660411",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2371228727",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-0c9c3f79f44ac55a4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2050528810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-08cc22e6f9e28ef37",
            "self": false,
            "source_security_group_id": "sg-0ec3fd5a7c2ead73b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3956933022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-0dcf8d4662eaf508c",
            "self": false,
            "source_security_group_id": "sg-0ec3fd5a7c2ead73b",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-580412936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-0028f302f835fd411",
            "self": false,
            "source_security_group_id": "sg-0ec3fd5a7c2ead73b",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-834951721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-02437d28e3142bb26",
            "self": false,
            "source_security_group_id": "sg-0ec3fd5a7c2ead73b",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1432709602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-09ce26a1a3046c885",
            "self": false,
            "source_security_group_id": "sg-0ec3fd5a7c2ead73b",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3195939497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-0a76ff3f1f02a04e3",
            "self": false,
            "source_security_group_id": "sg-0ec3fd5a7c2ead73b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1739520957",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-080c3f01757913b2c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1835210070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-0edc5c339069128f1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3376199353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-034ba292a86660411",
            "security_group_rule_id": "sgr-08e0ab6e32b31377e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:network-acl/acl-06750b5f2b863378f",
            "default_network_acl_id": "acl-06750b5f2b863378f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06750b5f2b863378f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "891377124516",
            "subnet_ids": [
              "subnet-03f23c2cd22743173",
              "subnet-0434377dcf68a3597",
              "subnet-059749284852dad15",
              "subnet-05d37e9b3b89c5505",
              "subnet-0beadc265b909d268",
              "subnet-0d07b618e1f1e00d7"
            ],
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:route-table/rtb-0792bca927ca863a1",
            "default_route_table_id": "rtb-0792bca927ca863a1",
            "id": "rtb-0792bca927ca863a1",
            "owner_id": "891377124516",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:security-group/sg-0ce920af46dbe4553",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ce920af46dbe4553",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377124516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0e9364aa548677d",
            "domain": "vpc",
            "id": "eipalloc-0b0e9364aa548677d",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-132-94-221.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.94.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:internet-gateway/igw-04c6921b4626f3d56",
            "id": "igw-04c6921b4626f3d56",
            "owner_id": "891377124516",
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0e9364aa548677d",
            "association_id": "eipassoc-0cc969fb3048bb348",
            "connectivity_type": "public",
            "id": "nat-00bf332aa94ea6f8e",
            "network_interface_id": "eni-083a0b46912cf14e1",
            "private_ip": "10.0.48.50",
            "public_ip": "18.132.94.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-059749284852dad15",
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0244e7f156b0792c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00bf332aa94ea6f8e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0244e7f156b0792c3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c6921b4626f3d56",
            "id": "r-rtb-098ac3dc878ea2a7e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098ac3dc878ea2a7e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:route-table/rtb-0cba9e394e2c2728b",
            "id": "rtb-0cba9e394e2c2728b",
            "owner_id": "891377124516",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:route-table/rtb-0244e7f156b0792c3",
            "id": "rtb-0244e7f156b0792c3",
            "owner_id": "891377124516",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:route-table/rtb-098ac3dc878ea2a7e",
            "id": "rtb-098ac3dc878ea2a7e",
            "owner_id": "891377124516",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0246cdfeb4db94ffd",
            "route_table_id": "rtb-0cba9e394e2c2728b",
            "subnet_id": "subnet-0d07b618e1f1e00d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09172d47f9c37df0e",
            "route_table_id": "rtb-0cba9e394e2c2728b",
            "subnet_id": "subnet-0beadc265b909d268"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f3df8f795c0ffa7",
            "route_table_id": "rtb-0cba9e394e2c2728b",
            "subnet_id": "subnet-03f23c2cd22743173"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096608fd01ac81b30",
            "route_table_id": "rtb-0244e7f156b0792c3",
            "subnet_id": "subnet-091bbdd4603d37733"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4f6f32daa392b4a",
            "route_table_id": "rtb-0244e7f156b0792c3",
            "subnet_id": "subnet-006656baa77bbce73"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bb737d42d3fc517",
            "route_table_id": "rtb-0244e7f156b0792c3",
            "subnet_id": "subnet-0c02c44b8dc7c71a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035163f7f72cb68e4",
            "route_table_id": "rtb-098ac3dc878ea2a7e",
            "subnet_id": "subnet-059749284852dad15"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd9df02291575625",
            "route_table_id": "rtb-098ac3dc878ea2a7e",
            "subnet_id": "subnet-05d37e9b3b89c5505"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4d869b3f17b276d",
            "route_table_id": "rtb-098ac3dc878ea2a7e",
            "subnet_id": "subnet-0434377dcf68a3597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-0d07b618e1f1e00d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d07b618e1f1e00d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-0beadc265b909d268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beadc265b909d268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-03f23c2cd22743173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.54.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f23c2cd22743173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-091bbdd4603d37733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091bbdd4603d37733",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-006656baa77bbce73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006656baa77bbce73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-0c02c44b8dc7c71a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c02c44b8dc7c71a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-059749284852dad15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059749284852dad15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-05d37e9b3b89c5505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d37e9b3b89c5505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:subnet/subnet-0434377dcf68a3597",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0434377dcf68a3597",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377124516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05b9dc0e0ae7e1385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377124516:vpc/vpc-05b9dc0e0ae7e1385",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06750b5f2b863378f",
            "default_route_table_id": "rtb-0792bca927ca863a1",
            "default_security_group_id": "sg-0ce920af46dbe4553",
            "dhcp_options_id": "dopt-01907a001cd062110",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b9dc0e0ae7e1385",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0792bca927ca863a1",
            "owner_id": "891377124516",
            "tags": {
              "Name": "darey-liveclass-cluster"
            },
            "tags_all": {
              "Name": "darey-liveclass-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}